fixed spacing

--- a/qset-website/src/Home.css
+++ b/qset-website/src/Home.css
@@ -1,15 +1,24 @@
 .home-page{
   background: #16080f;
+  display: flex;
+  flex-direction: column;
+}
+
+section{
+  
+  padding: 40px 20px;
+  
 }
 
 /*hero section */
 .hero-section {
-  position: relative;
-  min-height: 600px;                         /* height of the hero */
+  position: relative;                         /* height of the hero */
   background-size: cover;                    /* fill the section */
   background-position: center;               /* nicely centered */
   background-repeat: no-repeat;
   padding-top:350px;
+  width: 100%;
+  height: 75vh;
 }
 
 .hero-overlay {
@@ -154,6 +163,12 @@
 /*info sections */
 .about-section {
     background: #16080f;
+    max-width: 1500px;
+    width: 100%;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    margin: auto;
 }
 
 .section-title {
@@ -169,15 +184,19 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 35px;
+  gap: 4%;
+  flex-wrap: wrap;
   padding-top: 4rem;
   justify-content: center;
 }
 
 .team-photo{
-  height: 700px;
+  height: auto;
+  max-height: 400px;
+  width: 100%;
   /*filter: brightness(70%);*/ /*optional filter to make the image darker and more cohesive with the dark theme*/
   border: 7px solid #cb1e2a;
+  border-radius: 8px;
 }
 
 .join-section-title {
@@ -186,7 +205,7 @@
     color: #fffef9;
     text-align: center;
     margin-bottom: 20px;
-    padding-top: 60px;
+   
     padding-bottom: 20px;
     background: #16080f;
 }
@@ -196,8 +215,7 @@
   line-height: 1.6;
   color: #f5f5f5;
   text-align: left;
-  width: 672px;
-  height: 378px;
+  flex: 1;
 }
 
 .information-list li::marker {
@@ -205,25 +223,43 @@
   font-size: 1.5rem;
   
 }
+
+.video-container {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .information-video {
   border: 7px solid #cb1e2a;
+  border-radius: 8px;
+  width: 100%;
+  height: auto;
+  aspect-ratio: 16 / 9;
   /*filter: brightness(70%);*/ /*optional filter to make the image darker and more cohesive with the dark theme*/
 }
 
 .join-info-section {
   background: #16080f;
+    max-width: 1500px;
+    width: 100%;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    margin: auto;
 }
 
 .join-boxes-container {
   display: flex;
-  gap: 40px;
+  gap: 4%;
   justify-content: center;
+  flex-wrap: wrap;
   padding-top: 20px;
 }
 
 .join-box{
-  width: 680px;
-  height: 300px;
+  flex: 1;
+  height: auto;
   background: #0C121F;
   border: 2px solid #cb1e2a;
   border-radius: 8px;
@@ -252,16 +288,27 @@
 }
 
 /*highlight section */
+.team-highlights-section {
+  background: #16080f;
+    max-width: 1500px;
+    width: 100%;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+}
 .highlights-container{
   display: flex;
-  gap: 40px;
+  gap: 4%;
+  flex-wrap:wrap;
   justify-content: center;
   padding-top: 20px;
 }
 
 .highlight-box {
-  width: 500px;
-  height: 300px;
+  flex: 1;
+  height: auto;
+  min-width: 400px;
   background: #0C121F;
   border: 2px solid #cb1e2a;
   border-radius: 8px;
@@ -309,18 +356,29 @@ h3{
 
 
 /*subteam section */
-
+.subteams-section {
+  background: #16080f;
+    max-width: 1500px;
+    width: 100%;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+}
 
 .subteams-container {
   display: flex;
-  gap: 40px;
+  gap: 4%;
   justify-content: center;
+  flex-wrap: wrap;
   padding-top: 20px;
 }
 
 .subteam-card {
-  width: 600px;
-  height: 700px;
+  flex: 1;
+  height: auto;
+  min-height: 500px;
+  max-width: 600px;
   background: #0C121F;
   border: 2px solid #cb1e2a;
   border-radius: 8px;
@@ -370,5 +428,25 @@ h3{
   margin-top: 10px;
   padding: 20px;
   padding-top: 0px;
+}
+
+.sponsors-section{
+  background: #16080f;
+    max-width: 1500px;
+    width: 100%;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+
+}
+.sponsors-container{
+  display: flex;
+  gap: 4%;
+  background: #f5f5f5;
+  flex-wrap: wrap;
+  width: 100%;
+  justify-content: center;
+  min-height: 300px;
 }
 
